[package]
name = "cc-sakura-line"
version = "0.1.0"
edition = "2021"

description = "A calm, minimal statusline for Claude Code"
license = "MIT"
repository = "https://github.com/kokoichi206/cc-sakura-line"
homepage = "https://github.com/kokoichi206/cc-sakura-line"
authors = ["kokoichi206"]
keywords = ["claude-code", "statusline", "terminal", "tui"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = "0.26"
serde_json = "1"
unicode-width = "0.1"
